...
  "about_termsOfUse": "Terms of Use",
  "accountDetails_descriptor_legacy": "Legacy",
  "accountDetails_descriptor_segwit": "Segwit",
  "accountDetails_descriptor_taproot": "Taproot",
  "accountDetails_descriptor_wrappedSegwit": "Wrapped Segwit",
  "account_details_filter_tags_sortBy": "Sort by",
  "account_details_untagged_card": "Untagged",
  "account_emptyTxHistoryTextExplainer_FilteredView": "Applied filters are hiding all transactions.\nUpdate or reset filters to view transactions.",
  "account_empty_tx_history_text_explainer": "There are no transactions in this account.\nReceive your first transaction below.",
  "account_type_label_taproot": "Taproot",
  "account_type_sublabel_testnet": "Testnet",
  "accounts_empty_text_explainer": "Create a mobile wallet with Magic Backups.",
  "accounts_empty_text_learn_more": "Get Started",
...
  "backups_toggle_envoy_mobile_wallet_key": "Mobile Wallet Key",
  "backups_viewMobileWalletSeed": "View Mobile Wallet Seed",
  "bottomNav_accounts": "Accounts",
  "bottomNav_activity": "Activity",
  "bottomNav_devices": "Devices",
  "bottomNav_learn": "Learn",
  "bottomNav_privacy": "Privacy",
  "bottomNav_transfer": "Transfer",
  "btcpay_connection_modal_expired_subheading": "This voucher expired on {period}.\n\n\nPlease contact the issuer with any voucher-related questions.",
...
  "card_coins_unselected": "Coins",
  "card_label_of": "of",
  "change_output_from_multiple_tags_modal_heading": "Choose a Tag",
  "change_output_from_multiple_tags_modal_subehading": "This transaction spends coins from multiple tags. How would you like to tag your change?",
  "coinDetails_tagDetails": "TAG DETAILS",
...
  "component_24WordSeed": "24 Word Seed",
  "component_Apply": "Apply",
  "component_advanced": "Advanced",
  "component_apply": "Apply",
  "component_areYouSure": "Are you sure?",
  "component_back": "Back",
  "component_cancel": "Cancel",
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
...
  "copyToClipboard_txid": "Your transaction ID will be copied to the clipboard and may be visible to other apps on your phone.",
  "create_first_tag_modal_1_2_subheading": "Tags are a useful way to organize your coins.",
  "create_first_tag_modal_2_2_ie_text_field": "Enter new tag i.e. Exchange",
  "create_first_tag_modal_2_2_suggest": "Suggestions",
  "create_second_tag_modal_2_2_mostUsed": "Most used",
...
  "exploreAdresses_activityOptions_editAccountName": "Edit Account Name",
  "exploreAdresses_activityOptions_exploreAddresses": "Explore Addresses",
  "exploreAdresses_activityOptions_showDescriptor": "Show Descriptor",
  "exploreAdresses_activityOptions_signMessage": "Sign Message",
  "export_backup_modal_subheading": "This encrypted file contains useful wallet data such as labels, accounts, and settings.\nThis file is encrypted with your Mobile Wallet Seed. Ensure your seed is backed up securely. ",
...
  "privacy_node_configure_noConnectionEsplora": "Could not connect to Esplora server.",
  "privacy_node_connectedTo": "Connected to",
  "privacy_node_connection_couldNotReach": "Couldn't reach node.",
  "privacy_node_connection_localAddress_warning": "Even with ‘Improved Privacy’ active, Envoy cannot prevent interference by compromised devices on your local network.",
  "privacy_node_nodeAddress": "Enter your node address",
  "privacy_node_nodeType_foundation": "Foundation (Default)",
  "privacy_node_nodeType_personal": "Personal Node",
  "privacy_node_nodeType_publicServers": "Public servers",
  "privacy_node_title": "Node",
...
  "receive_tx_list_awaitingConfirmation": "Awaiting confirmation",
  "receive_tx_list_change": "Change",
  "receive_tx_list_receive": "Receive",
  "receive_tx_list_scan": "Scan",
  "receive_tx_list_send": "Send",
...
  "settings_advanced_enableBuyRamp": "Buy in Envoy",
  "settings_advanced_enabled_signet_modal_link": "Learn more about Signet [[here]].",
  "settings_advanced_enabled_signet_modal_subheading": "Enabling Signet adds a Signet version of your Envoy Wallet. This feature is primarily used by developers or testers and has zero value.",
  "settings_advanced_enabled_testnet_modal_link": "Learn how to do that [[here]].",
  "settings_advanced_enabled_testnet_modal_subheading": "Enabling Testnet adds a Testnet4 version of your Envoy Wallet, and allows you to connect Testnet accounts from your Passport.",
...
  "stalls_before_sending_tx_scanning_subheading": "This might take a few seconds",
  "tagDetails_EditTagName": "Edit Tag Name",
  "tagSelection_example1": "Expenses",
  "tagSelection_example2": "Personal",
  "tagSelection_example3": "Savings",
...
  "tagged_coin_details_menu_cta1": "EDIT TAG NAME",
  "tagged_tagDetails_emptyState_explainer": "There are no coins assigned to this tag.",
  "tagged_tagDetails_sheet_cta1": "Send Selected",
  "tagged_tagDetails_sheet_cta2": "Tag Selected",
  "tagged_tagDetails_sheet_retag_cta2": "Retag Selected",
  "tagged_tagDetails_sheet_transferSelected": "Transfer Selected",
  "tap_and_drag_first_time_text": "Hold to drag and reorder your accounts.",
  "taproot_passport_dialog_heading": "Taproot on Passport",
  "taproot_passport_dialog_later": "Do It Later",
  "taproot_passport_dialog_reconnect": "Reconnect Passport",
...
