...
        mainAxisSize: MainAxisSize.min,
        mainAxisAlignment: MainAxisAlignment.spaceAround,
        children: [
          Align(
            alignment: Alignment.centerRight,
            child: Semantics(
              identifier: "coin_tag_warning_close",
              child: IconButton(
                padding: const EdgeInsets.all(EnvoySpacing.small),
                icon: const Icon(Icons.close),
                onPressed: () {
                  if (ref.read(selectedAccountProvider) != null) {
                    coinSelectionOverlayKey.currentState?.show(
...
