# SPDX-FileCopyrightText: 2026 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# (16) enableTestnet
appId: com.foundationdevices.envoy
---

# go to advanced
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

# disable testnet
- runFlow:
    when:
      visible:
        id: "Testnet Toggle-true"
    commands:
      - tapOn:
          id: Testnet Toggle-true

# refresh settings
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

# enable it:
- runFlow:
    when:
      visible:
        id: "Testnet Toggle-false"
    commands:
      - tapOn:
          id: Testnet Toggle-false

# Check that a pop up comes up and tap continue
- tapOn:
    id: PopUp Primary Button

# refresh settings
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

# disable testnet
- runFlow:
    when:
      visible:
        id: "Testnet Toggle-true"
    commands:
      - tapOn:
          id: Testnet Toggle-true

# refresh settings
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

# enable it:
- runFlow:
    when:
      visible:
        id: "Testnet Toggle-false"
    commands:
      - tapOn:
          id: Testnet Toggle-false

- tapOn:
    id: PopUp Close Button

# check that popup close
- assertNotVisible: Enabling Signet adds a Signet version of your Envoy Wallet. This feature is primarily used by developers or testers and has zero value.

# back to home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu

# check that testnet is visible
- scrollUntilVisible:
    element:
      text: Testnet

# disable it in settings
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

# turn it off
- tapOn:
    id: Testnet Toggle-true

# go back
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu

# check home and expect no testnet
- assertNotVisible: "Testnet"

# enable testnet again
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

- tapOn:
    id: Testnet Toggle-false
- tapOn:
    id: PopUp Primary Button

# go back
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu