# SPDX-FileCopyrightText: 2026 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# (19) taprootAddressTest
appId: com.foundationdevices.envoy
---

# go to advanced
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

# enable taproot if disabled
- runFlow:
    when:
      visible:
        id: "Taproot Toggle-false"
    commands:
      - tapOn:
          id: Taproot Toggle-false
      - tapOn:
          id: PopUp Primary Button
      - tapOn:
          id: PopUp Secondary Button
      - assertNotVisible:
          id: envoy_icon_info
      - assertNotVisible: Taproot on Passport

# back to home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu

- tapOn: GH TEST ACC (#1)
- tapOn: Receive

# check the addres is "bc1p"
- assertVisible:
    text: "bc1p.*"

# back to account
- tapOn:
    id: hamburger_menu

# open menu
- tapOn:
    id: Right Action Button

- tapOn: Show Descriptor

# check for Taproot
- assertVisible: Taproot

# back to home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu

# settings
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

# disable taproot
- tapOn:
    id: Taproot Toggle-true
- tapOn:
    id: PopUp Primary Button

# back to home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu

- tapOn: GH TEST ACC (#1)
- tapOn: Receive

# check the addres is "bc1q"
- assertVisible:
    text: "bc1q.*"

# back to account
- tapOn:
    id: hamburger_menu

# open menu
- tapOn:
    id: Right Action Button

- tapOn: Show Descriptor

# check for segwit
- assertVisible: Segwit

# go home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu
